--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,24 +16,14 @@
                 <div class="f4 w-60-m w-40-l lh-copy o-80">Theeta consists of subsidiaries working in various sectors of import, export and production.</div>    
                 <!-- CREDIT: Figar Ali https://codepen.io/figarali -->
                 <div id="app" class="mt5 flex flex-column items-center flex-row-l justify-between-l">
-                    <!-- <a href="https://beckher.com/en" target="_blank">
-                        <card class="mb6" data-image="https://theeta.nl/images/beckher-bg.jpg">
-                            <h2 slot="header" class="title">Beckher</h2>
-                            <p slot="content">Our own brand of small domestic appliances.</p>
-                        </card>
-                    </a> -->
-                    <!-- <card class="mb6" data-image="https://theeta.nl/images/samara-doole-peaTniZsUQs-unsplash.jpg">
-                        <h2 slot="header" class="title">Sanosil</h2>
-                        <p slot="content">Innovative, non-polluting disinfectant.</p>
-                    </card> -->
-                    <card class="mb6" data-image="https://theeta.nl/images/beckher-bg.jpg">
+                    <card class="mb6" data-image="/assets/beckher-bg.jpg">
                         <div slot="header" class="flex flex-column align-center mv0">
                             <h2 class="title tc">Beckher</h2>
                             <img class="" src="/assets/coffeemaker_mi-cm-1601b.png" alt="">
                         </div>
                         <p slot="content" class="mt2 tc">Our own brand of small domestic appliances.</p>
                     </card>
-                    <card class="mb6" data-image="https://theeta.nl/images/samara-doole-peaTniZsUQs-unsplash.jpg">
+                    <card class="mb6" data-image="/assets/sanosil-bg.jpg">
                         <div slot="header" class="flex flex-column align-center mv0">
                             <h2 class="title tc">Sanosil</h2>
                             <img class="" src="/assets/Sanosil-Super-25-Ag-5-kg.png" alt="">
@@ -46,8 +36,6 @@
                             <img class="" src="/assets/miravento-moscato-bottles.png" alt="">
                             
                         </div>
-                        <!-- <img slot="header" class="h5" src="/assets/miravento-moscato-bottles.png" alt=""> -->
-                        <!-- <h1 slot="header">Miravento</h1> -->
                         <p slot="content" class="mt2 tc">Italian Moscato d’Asti, Rosé and Prosecco.</p>
                     </card>
                 </div>
@@ -125,9 +113,6 @@
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js'></script>
         <script src="/script.js"></script>
-
-        <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('7d040c6311')"></script>
-        <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
     </body>
 </html>
 
