--- a/_layouts/brand.html
+++ b/_layouts/brand.html
@@ -5,14 +5,64 @@ layout: default
 
 {%- if brand.name == page.title -%}
 
-<section class="pt3">
-    <h1 class="f-headline mb2">{{brand.name}}</h1>
-    <p class="f3 mb4 serif lh-title black-60">{{brand.intro}}</p>
+<section class="bg-beige pb6">
+    <div class="flex justify-between items-center">
+        <h1 class="mv0 f-headline mb2">{{brand.name}}</h1>
+        <div class="w5">
+            <img src="{{brand.logo}}" alt="{{brand.name}} logo">
+        </div>
+    </div>
+    <p class="f3 mb5 serif lh-title black-60">{{brand.intro}}</p>
     <div class="aspect-ratio aspect-ratio--8x5 mb4">
         <div class="aspect-ratio--object cover" style="background:url({{brand.cover}}) center;"></div>
-      </div>
+    </div>
+    <div class="f4 mt6 measure-wide center">
+        {{brand.text | markdownify}}
+    </div>
+</section>
+
+<section class="">
+    <h1 class="f1 mb4 black-60">See more of our <em>Brands</em> →</h1>
+    <div class="f4 w-60-m w-40-l lh-copy o-60">Theeta consists of subsidiaries working in various sectors of import, export and production.</div>    
+    <div id="app" class="mt5 flex flex-column items-center flex-row-l justify-between-l">
+        <!-- <a href="https://beckher.com/en" target="_blank">
+            <card class="mb6" data-image="https://theeta.nl/images/beckher-bg.jpg">
+                <h2 slot="header" class="title">Beckher</h2>
+                <p slot="content">Our own brand of small domestic appliances.</p>
+            </card>
+        </a> -->
+        <!-- <card class="mb6" data-image="https://theeta.nl/images/samara-doole-peaTniZsUQs-unsplash.jpg">
+            <h2 slot="header" class="title">Sanosil</h2>
+            <p slot="content">Innovative, non-polluting disinfectant.</p>
+        </card> -->
+        <card class="mb6" data-image="https://theeta.nl/images/beckher-bg.jpg">
+            <div slot="header" class="flex flex-column align-center mv0">
+                <h2 class="title tc">Beckher</h2>
+                <img class="" src="/assets/coffeemaker_mi-cm-1601b.png" alt="">
+            </div>
+            <p slot="content" class="mt2 tc">Our own brand of small domestic appliances.</p>
+        </card>
+        <card class="mb6" data-image="https://theeta.nl/images/samara-doole-peaTniZsUQs-unsplash.jpg">
+            <div slot="header" class="flex flex-column align-center mv0">
+                <h2 class="title tc">Sanosil</h2>
+                <img class="" src="/assets/Sanosil-Super-25-Ag-5-kg.png" alt="">
+            </div>
+            <p slot="content" class="mt2 tc">Innovative, non-polluting disinfectant</p>
+        </card>
+        <card class="mb6" data-image="/assets/vineyards.jpg">
+            <div slot="header" class="flex flex-column align-center mv0">
+                <h2 class="title tc">Miravento</h2>
+                <img class="" src="/assets/miravento-moscato-bottles.png" alt="">
+                
+            </div>
+            <p slot="content" class="mt2 tc">Italian Moscato d’Asti, Rosé and Prosecco.</p>
+        </card>
+    </div>
 </section>
         
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js'></script>
+    <script src="/script.js"></script>
+
 {%- endif -%}
 
 {%- endfor -%}  
