--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -89,7 +89,7 @@
         <section class="pt0">
             {%- for brand in site.data.brands[page.lang] -%}
         
-            <a class="link" href="{{page.lang}}/{{brand.url}}">
+            <a class="link" href="/{{page.lang}}/{{brand.url}}">
                 <div class="flex flex-column flex-row-l items-top justify-between mv6 grow">
                     <div class="w-50-l bg-beige black pa4 pa5-l flex flex-column justify-between br3">
                         <div>
