--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,10 +16,10 @@
                 <div class="f4 w-60-m w-40-l lh-copy o-80">Theeta consists of subsidiaries working in various sectors of import, export and production.</div>    
                 <!-- CREDIT: Figar Ali https://codepen.io/figarali -->
                 <div id="app" class="mt5 flex flex-column items-center flex-row-l justify-between-l">
-                    <card class="mb6" data-image="/assets/beckher-bg.jpg">
+                    <card class="mb6" data-image="/assets/abstract-bg-2.jpg">
                         <div slot="header" class="flex flex-column align-center mv0">
                             <h2 class="title tc">Beckher</h2>
-                            <img class="" src="/assets/coffeemaker_mi-cm-1601b.png" alt="">
+                            <img class="" src="/assets/beckher-kettle-HOT-W20.png" alt="">
                         </div>
                         <p slot="content" class="mt2 tc">Our own brand of small domestic appliances.</p>
                     </card>
