--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -33,7 +33,7 @@
                     <card class="mb6" data-image="/assets/vineyards.jpg">
                         <div slot="header" class="flex flex-column align-center mv0">
                             <h2 class="title tc">Miravento</h2>
-                            <img class="" src="/assets/miravento-moscato-bottles.png" alt="">
+                            <img class="" src="/assets/miravento-trio.png" alt="">
                             
                         </div>
                         <p slot="content" class="mt2 tc">Italian Moscato d’Asti, Rosé and Prosecco.</p>
