added langs NL EL

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
                 <div class="o-70 mb3">© {{ site.time | date: '%Y' }}, Theeta B.V.</div>
                 <div class="o-50 link">{{site.data.footer[page.lang].credits | markdownify}}</div>
             </div>
-            <div class="w-100 w-50-l o-40">
+            <div class="w-100 w-50-l o-40 f6">
                 <div>{{site.data.footer[page.lang].footnote | markdownify}}</div>
             </div>
         </div>
