--- a/_layouts/brand.html
+++ b/_layouts/brand.html
@@ -6,26 +6,75 @@ layout: default
 {%- if brand.name == page.title -%}
 
 <section class="bg-beige mt4 pt5 pb6 br4">
-    <div class="flex justify-between items-center">
-        <h1 class="mv0 f-headline mb2 color-2">{{brand.name}}</h1>
+    <div class="flex flex-column flex-row-l justify-between-l items-center-l mb5 mb-l">
+        <h1 class="mt0 f-headline mb2 mb0-l color-2">{{brand.name}}</h1>
         <div class="w5">
             <img src="{{brand.logo}}" alt="{{brand.name}} logo">
         </div>
     </div>
     <p class="f3 mb5 serif lh-title black-60">{{brand.intro}}</p>
-    <div class="aspect-ratio aspect-ratio--8x5 mb4">
-        <div class="aspect-ratio--object cover br3 pa5 flex justify-end" style="background:url({{brand.cover}}) center;">
-            <img class="h-100" src="{{brand.item}}" alt="{{brand.name}} product">
+    <div class="aspect-ratio aspect-ratio--3x4 aspect-ratio--8x5-l mb4">
+        <div class="aspect-ratio--object cover br3 pa5 flex flex-column flex-row-l justify-center justify-end-l" style="background:url({{brand.cover}}) center;">
+            <img class="" src="{{brand.item}}" alt="{{brand.name}} product">
         </div>
     </div>
-    <div class="f4 mt6 measure-wide center">
+    <div class="f4 mt5 measure-wide center">
         {{brand.text | markdownify}}
     </div>
+
+    {% if brand.docs %}
+    <div id="docs">
+        <h2 class="f1 tc color-2 mt6 mb0">{{ site.data.brandpage[page.lang].docs.title }}</h2>
+        <div class="f3 serif black-60 tc mb5">
+            <p>{{ site.data.brandpage[page.lang].docs.text }}</p>
+        </div>
+
+        <!-- <a href="{{brand.zip.loc}}" class="no-underline">
+            <div class="flex pa3 pa4-ns bg-light-gray dark-gray dib br3 grow mb4">
+                <div class="mr3">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><path fill="none" d="M0 0h24v24H0z"/><path d="M10.414 3l2 2H21a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h7.414zM18 18h-4v-3h2v-2h-2v-2h2V9h-2V7h-2.414l-2-2H4v14h16V7h-4v2h2v2h-2v2h2v5z"/></svg>
+                </div>
+                <div class="f4 b mt1 lh-title">Download all files in a ZIP archive <span class="o-50 fw4">({{brand.zip.size}})</span></div>
+            </div>
+        </a> -->
+
+        {% for doc in brand.docs %}
+        <a target="_blank" href="{{doc.file}}" class="no-underline">
+            <div class="flex pa3 pa4-ns bg-{{doc.bg-color}} {{doc.text-color}} dib br3 grow">
+                <div class="mr3">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32"><path fill="none" d="M0 0h24v24H0z"/><path d="M13 12h3l-4 4-4-4h3V8h2v4zm2-8H5v16h14V8h-4V4zM3 2.992C3 2.444 3.447 2 3.999 2H16l5 5v13.993A1 1 0 0 1 20.007 22H3.993A1 1 0 0 1 3 21.008V2.992z"/></svg>
+                </div>
+                <div class="">
+                <div class="f5 f4-l lh-title mb1 b">{{doc.title}} <span class="fw4 o-60">({{doc.type}})</span></div>
+                <div class="f5 f4-l lh-copy lh-title-l">{{doc.description}}</div>
+                </div>
+            </div>
+        </a>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+    {% if brand.youtube %}
+    <div id="youtube">
+        <h2 class="f1 tc color-2 mt6">{{ site.data.brandpage[page.lang].videos.title }}</h2>
+        {% for video in brand.youtube %}
+        <div class="mv5">
+            <h3 class="serif b f3">{{video.title}}</h3>
+            <div class="iframe-container">
+                <iframe width="840" height="630"
+                src="https://www.youtube.com/embed/{{video.id}}">
+                </iframe>
+            </div> 
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
 </section>
 
 <section class="">
-    <h1 class="f1 mb4 black-60">See more of our <em>Brands</em> →</h1>
-    <div class="f4 w-60-m w-40-l lh-copy o-60">Theeta consists of subsidiaries working in various sectors of import, export and production.</div>    
+    <h1 class="f1 mb4 black-60">{{ site.data.brandpage[page.lang].more-brands.title }}</h1>
+    <!-- <div class="f4 w-60-m w-40-l lh-copy o-60">Theeta consists of subsidiaries working in various sectors of import, export and production.</div>     -->
     <div id="app" class="mt5 flex flex-column items-center flex-row-l justify-between-l">
         <card class="mb6" data-image="/assets/abstract-bg-2.jpg">
             <div slot="header" class="flex flex-column align-center mv0">
