--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -115,11 +115,11 @@
             {%- endfor -%}   
         </section>
         
-        <section class="grid-container-2x2r pt0">
+        <section class="grid-container-2x2r pa2 pa5-l">
 
             {% for grid-link in site.data.index[page.lang].grid-links %}
             <a href="{{grid-link.url}}" class="no-underline grid-item-2x2 ">
-                <div class="grow pa5 tc flex flex-column justify-center h-100">
+                <div class="grow pa4 pa5-l tc flex flex-column justify-center h-100">
                     <h3 class="label o-60 flex items-center justify-center">{{grid-link.label}}
                         <svg class="dib-hover white-50 ml2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg>
                     </h3>
