--- a/_layouts/brand.html
+++ b/_layouts/brand.html
@@ -7,7 +7,7 @@ layout: default
 
 <section class="bg-beige mt4 pt5 pb6 br4">
     <div class="flex flex-column flex-row-l justify-between-l items-center-l mb5 mb-l">
-        <h1 class="mt0 f-headline mb2 mb0-l color-2">{{brand.name}}</h1>
+        <h1 class="mt0 f-headline mb4 mb0-l color-2">{{brand.name}}</h1>
         <div class="w5">
             <img src="{{brand.logo}}" alt="{{brand.name}} logo">
         </div>
@@ -59,7 +59,7 @@ layout: default
         <h2 class="f1 tc color-2 mt6">{{ site.data.brandpage[page.lang].videos.title }}</h2>
         {% for video in brand.youtube %}
         <div class="mv5">
-            <h3 class="serif b f3">{{video.title}}</h3>
+            <h3 class="serif f3">{{video.title}}</h3>
             <div class="iframe-container">
                 <iframe width="840" height="630"
                 src="https://www.youtube.com/embed/{{video.id}}">
