--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -1,4 +1,91 @@
 ---
 layout: default
 ---
-news
+<section>
+<h1 class="f-subheadline mt0" >All Announcements</h1>
+
+{% if site.paginate %}
+{% assign posts = paginator.posts %}
+{% else %}
+{% assign posts = site.posts %}
+{% endif %}
+
+
+{%- if posts.size > 0 -%}
+{%- if page.list_title -%}
+    <h2 class="post-list-heading">{{ page.list_title }}</h2>
+{%- endif -%}
+    {%- assign date_format = "%-d %B %Y" -%}
+
+    {% assign en_posts = site.posts | where: "lang", page.lang %}
+
+    {%- for post in en_posts -%}
+
+    <a class="db no-underline dim near-black main" href="{{ post.url | relative_url }}">
+        <div class="flex flex-column flex-row-ns">
+        {%- if post.main-image == empty -%}
+            <div class="w-100 w-70-ns bl bw5 b--dark-green pl4">
+        {% else %}          
+            <div class="w-100 w-30-ns mr0 mr5-ns">
+            <div class="db aspect-ratio aspect-ratio--6x4 ">
+                <span role="img" style="background-image:url({{post.main-image}});" class="bg-center cover aspect-ratio--object"></span>
+            </div>
+            </div>
+            <div class="w-100 w-50-ns">
+        {%- endif -%}
+
+            <h2 class="f3 f2-l mt3 mb2">{{ post.title | escape }}</h2>
+            
+            <p class="fw4 mv0 secondary">
+            <div class="gray flex">
+                <div class="flex items-center mr3">
+                    <svg class="mr2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M17 3h4a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4V1h2v2h6V1h2v2zm-2 2H9v2H7V5H4v4h16V5h-3v2h-2V5zm5 6H4v8h16v-8zM6 14h2v2H6v-2zm4 0h8v2h-8v-2z"/></svg>
+                    <span class="mt1">
+                        {{ post.date | date: "%Y-%m-%d" }}
+                    </span>
+                </div>
+                <div class="flex items-center">
+                    <svg class="mr2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M17.618 5.968l1.453-1.453 1.414 1.414-1.453 1.453a9 9 0 1 1-1.414-1.414zM12 20a7 7 0 1 0 0-14 7 7 0 0 0 0 14zM11 8h2v6h-2V8zM8 1h8v2H8V1z"/></svg>
+                    <span title="Estimated read time" class="mt1">
+                        {% assign words = post.content | number_of_words %}
+                        {% if words < 500 %}
+                            Less than 1 min
+                        {% else %}
+                            {{ words | divided_by:280 }} min
+                        {% endif %}
+                        to read
+                    </span>
+                </div>
+            </div>
+            </p>
+            <p class="fw4 db i dark-gray">
+            {{ post.content | strip_html | truncate: 250, "…"  }}
+            </p>
+            
+        </div>
+        </div>
+    </a>
+
+    {%- endfor -%}
+
+{% if site.paginate %}
+    <div class="pager">
+    <ul class="pagination">
+    {%- if paginator.previous_page %}
+        <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
+    {%- else %}
+        <li><div class="pager-edge">•</div></li>
+    {%- endif %}
+        <li><div class="current-page">{{ paginator.page }}</div></li>
+    {%- if paginator.next_page %}
+        <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
+    {%- else %}
+        <li><div class="pager-edge">•</div></li>
+    {%- endif %}
+    </ul>
+    </div>
+{%- endif %}
+
+{%- endif -%}
+
+</section>
