news and colors

--- a/_layouts/brand.html
+++ b/_layouts/brand.html
@@ -61,7 +61,8 @@ layout: default
         <div class="mv5">
             <h3 class="serif f3">{{video.title}}</h3>
             <div class="iframe-container">
-                <iframe width="840" height="630"
+                <iframe width="840" height="630" 
+                class="br4"
                 src="https://www.youtube.com/embed/{{video.id}}">
                 </iframe>
             </div> 
