--- a/_layouts/brand.html
+++ b/_layouts/brand.html
@@ -76,30 +76,7 @@ layout: default
 <section class="">
     <h1 class="f1 mb4 black-60">{{ site.data.brandpage[page.lang].more-brands.title }}</h1>
     <!-- <div class="f4 w-60-m w-40-l lh-copy o-60">Theeta consists of subsidiaries working in various sectors of import, export and production.</div>     -->
-    <div id="app" class="mt5 flex flex-column items-center flex-row-l justify-between-l">
-        <card class="mb6" data-image="/assets/abstract-bg-2.jpg">
-            <div slot="header" class="flex flex-column align-center mv0">
-                <h2 class="title tc">Beckher</h2>
-                <img class="" src="/assets/beckher-kettle-HOT-W20.png" alt="">
-            </div>
-            <p slot="content" class="mt2 tc">Our own brand of small domestic appliances.</p>
-        </card>
-        <card class="mb6" data-image="/assets/sanosil-bg.jpg">
-            <div slot="header" class="flex flex-column align-center mv0">
-                <h2 class="title tc">Sanosil</h2>
-                <img class="" src="/assets/Sanosil-Super-25-Ag-5-kg.png" alt="">
-            </div>
-            <p slot="content" class="mt2 tc">Innovative, non-polluting disinfectant</p>
-        </card>
-        <card class="mb6" data-image="/assets/vineyards.jpg">
-            <div slot="header" class="flex flex-column align-center mv0">
-                <h2 class="title tc">Miravento</h2>
-                <img class="" src="/assets/miravento-trio.png" alt="">
-                
-            </div>
-            <p slot="content" class="mt2 tc">Italian Moscato d’Asti, Rosé and Prosecco.</p>
-        </card>
-    </div>
+    {% include brand-cards.html %}
 </section>
         
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js'></script>
