--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <section>
-    <h1 class="f1 mt0">{{ site.data.news[page.lang].title }}</h1>
-    <div class="measure-wide f3 serif lh-copy gray">
+    <h1 class="f2 f1-l mt0">{{ site.data.news[page.lang].title }}</h1>
+    <div class="measure-wide f3-l serif lh-copy gray">
         {{ site.data.news[page.lang].intro }}
     </div>
 </section>
@@ -41,7 +41,7 @@ layout: default
             <div class="w-100 w-60-l">
         {%- endif -%}
 
-            <h2 class="f3 f2-l mt3 mb2">{{ post.title | escape }}</h2>
+            <h2 class="f2-l mt3 mb2">{{ post.title | escape }}</h2>
             
             <p class="fw4 mv0 secondary">
             <div class="gray flex">
