--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -91,7 +91,7 @@
             {%- endfor -%}   
         </section>
         
-        <section class="grid-container-2x2r pa2 pa5-l">
+        <section class="grid-container-2x2r pa2 pa5-l mb6 mb0-l">
 
             {% for grid-link in site.data.index[page.lang].grid-links %}
             <a href="{{grid-link.url}}" class="no-underline grid-item-2x2 ">
