--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,7 +12,7 @@
             {% include navbar.html %}
             
             <section class="pt3 pb6">
-                <h1 class="f1 mb4">{{lang.h1}}</h1>
+                <h1 class="f1 mb4 mt5">{{lang.h1}}</h1>
                 <div class="f4 w-60-m w-40-l lh-copy o-80">{{lang.subheadline}}</div>    
                 {% include brand-cards.html %}
             </section>
