--- a/_layouts/clients.html
+++ b/_layouts/clients.html
@@ -1,8 +1,42 @@
 ---
 layout: default
 ---
-<section>
-    <h1 class="f-headline">{{page.title}}</h1>
-    <p class="f4">We are proud to work with a selection of large clients</p>
+{% assign lang = site.data.clients[page.lang] %}
 
+<section>
+    <div class="mb6">
+        <h1 class="f1 mt4 mb3 tc">{{lang.clients-title}}</h1>
+        <div class="center tc measure gray f4 serif">
+            {{lang.clients-text}}
+        </div>
+    </div>
+    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4 nr4">
+        {% for client in site.data.clients[page.lang].clients %}
+            <div class="w-50 w-20-l mv5 mv0-l mh0 mh3-l">
+                <div class="h4 mb4 flex items-center justify-center">
+                    <img class="max-h-100" src="{{client.logo}}" alt="{{client.image}} logo"/>
+                </div>
+                <div class="label f6 tc">{{client.name}}</div>
+            </div>
+        {% endfor %}
+    </div>
+</section>
+
+<section>
+    <div class="mb6">
+        <h1 class="f2 f1-l mt4 mb3 tc">{{lang.retailers-title}}</h1>
+        <div class="center tc measure gray f4 serif">
+            {{lang.retailers-text}}
+        </div>
+    </div>
+    <div class="flex flex-column flex-row-l flex-wrap items-center items-top-l justify-around mb5 nl4 nr4">
+        {% for retailer in site.data.clients[page.lang].retailers %}
+            <a href="{{retailer.url}}" class="no-underline dark-gray grow w-50 w-20-l mv5 mv0-l mh0 mh3-l">
+                <div class="h4 mb4 flex items-center items-center justify-center">
+                    <img class="max-h-100" src="{{retailer.logo}}" alt="{{retailer.image}} logo"/>
+                </div>
+                <div class="label tc f6">{{retailer.name}}</div>
+            </a>
+        {% endfor %}
+    </div>
 </section>
