--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ footer p {
   letter-spacing: 0.1em;
 }
 
+.max-h-100 {
+  max-height: 100%;
+ }
+ 
 /* {% include nav-mobile.css %} */
 
 .label, label, form label {
